# speedtest-tracker

./: Cargo.toml  README.md
.cargo/: config.toml
database/: Cargo.toml
database/src/: lib.rs  tables.rs  types.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/component/: mod.rs  side_bar.rs
frontend/src/page/: home.rs
worker/: Cargo.toml  build.rs
worker/src/: main.rs
worker/src/database/: mod.rs  serde.rs
worker/src/database/bindings/: bandwidth_type.rs  delete_speedtest_reducer.rs  interface_type.rs  latency_type.rs  mod.rs  ping_type.rs  record_speedtest_reducer.rs  server_type.rs  speedtest_result_type.rs  speedtest_table.rs
