[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
cron = "0.15.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spacetimedb-sdk = "1.0"
tokio = { version = "1.45.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "time",
] }
uuid = { version = "1.17.0", features = ["serde"] }
